--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -253,3 +253,84 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', end
 #notSelCat {background-color: #534338;}
 #notSelCat:hover {background-color:#FFDFC5;}
 #selCat {color: #4F4035; font-family: Tahoma; font-size: 14px; font-weight: bolder; background-color:#FFDFC5;}
+
+/*  SECTIONS  */
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 1% 0 1% 0.5%;
+}
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+/*  GRID OF TWELVE  */
+.span_12_of_12 {
+	width: 100%;
+}
+
+.span_11_of_12 {
+  	width: 91.62%;
+}
+.span_10_of_12 {
+  	width: 83.25%;
+}
+
+.span_9_of_12 {
+  	width: 74.87%;
+}
+
+.span_8_of_12 {
+  	width: 66.5%;
+}
+
+.span_7_of_12 {
+  	width: 58.12%;
+}
+
+.span_6_of_12 {
+  	width: 49.75%;
+}
+
+.span_5_of_12 {
+  	width: 41.37%;
+}
+
+.span_4_of_12 {
+  	width: 33%;
+}
+
+.span_3_of_12 {
+  	width: 24.62%;
+}
+
+.span_2_of_12 {
+  	width: 16.25%;
+}
+
+.span_1_of_12 {
+  	width: 7.875%;
+}
+
+
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+/*
+@media only screen and (max-width: 480px) {
+	.col {  margin: 1% 0 1% 0%; }
+    
+    .span_1_of_12, .span_2_of_12, .span_3_of_12, .span_4_of_12, .span_5_of_12, .span_6_of_12, .span_7_of_12, .span_8_of_12, .span_9_of_12, .span_10_of_12, .span_11_of_12, .span_12_of_12 {
+	width: 100%; 
+	}
+}
+*/
