--- a/app/views/components/show.html.erb
+++ b/app/views/components/show.html.erb
@@ -5,18 +5,20 @@
 <table style = "width: 100%; height: 350px;">
 	<tr>
 		<td style = 'width: 400px;'>
-		<% if @component.photos != [] %>
+		
 			<div style = 'position: relative;'>
 				<div style = 'width: 100%;'>
-					<% if @component.photo != nil %><a href = "<%= @component.photo.link %>" data-lightbox="roadtrip" title = "<%= @component.photo.description %>"><%= image_tag @component.photo.link.thumb %></a><% end %>
+					<% if @component.get_photo != nil %><a href = "<%= @component.photo.link %>" data-lightbox="roadtrip" title = "<%= @component.photo.description %>"><%= image_tag @component.photo.link.thumb %></a><% else %><img src='<%= @component.alter_photo %>'/><% end %>
 				</div>
 				<div style = 'height: 60;'>
-					<% @component.photos.each do |photo| %>
-						<a href = "<%= photo.link %>" data-lightbox="roadtrip" title = "<%= photo.description %>"><%= image_tag photo.link.mini, :height => '30px'  %></a>
+					<% if @component.photos != [] %>
+						<% @component.photos.each do |photo| %>
+							<a href = "<%= photo.link %>" data-lightbox="roadtrip" title = "<%= photo.description %>"><%= image_tag photo.link.mini, :height => '30px'  %></a>
+						<% end %>
 					<% end %>
 				</div>
 			</div>
-		<% end %>
+		
 		</td>
 		<td valign = "top">
 				<div class = 'mini_cost_block'>
